書き込み系APIは対応しない
